--- a/events.html
+++ b/events.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="3000" id="slider-w">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="3000" id="slider-w">
     <div>
         <div>
             <div>
@@ -173,7 +173,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="form2-10" style="background-image: url(assets/images/img-7-2000x1333.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-section mbr-parallax-background" id="form2-10" style="background-image: url(assets/images/img-16-2000x1333.jpg); padding-top: 40px; padding-bottom: 40px;">
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>    <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -191,7 +191,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you and see you soon !</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="WANT TO JOIN OUR NEXT TRAINING SESSION ?">
-                        <input type="hidden" value="oW6QTKCILyFHaUjxMoC96F2C5XyEHsW5iB6N4/5PSowSPHYJVOByFLu1rzLkJx3HzOLbtJb9YJX3t8nOXz8jbSXwkTAN70TezqMsUF1XQhHf942LqesTFwYe+KxbX+wG" data-form-email="true">
+                        <input type="hidden" value="5Kd6X0T5btnsjomNfqU5RuM9sFQhfnmTeyOHtz0pE4pIlJdqlZK8eUvG5u+NYWw7rXHxYUOrgrcpdO444FEp3YyQLcknDMiAmIy/+3rz9wlvxucw0R1nrCwsKc6tA7EQ" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-10-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
