--- a/book.html
+++ b/book.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1n" style="background-image: url(assets/images/mbr-2000x1276.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Generator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1n" style="background-image: url(assets/images/mbr-2000x1276.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -98,7 +98,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="qn18/8gncRaEJvrZ/7RCifYgJqLfXabX854ISRF6RVIB+9fRtbT+YteVMMQv2UcgcpMGtoqTi+faT/9G6hMtc+lnay+sgehqvjyNfa/WG3jzD8hbYh/mdKrcHMlEU7s2" data-form-email="true">
+                        <input type="hidden" value="z/81Zd7LzFQpZYPrxMUw1m4r2JaerO0cH/hZ9PcLYEEEMUubaR1rAWWigH1J0aG2StFR9iZC2UTVJP0PmZoOzDJHqTcbCfJY7oiY4GgEiXafSEg1CqV+Eu/Sxybf029b" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
