--- a/testimonies.html
+++ b/testimonies.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Maker</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials3-15" style="background-image: url(assets/images/landscape2.jpg); padding-top: 120px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials3-15" style="background-image: url(assets/images/landscape2.jpg); padding-top: 120px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -159,7 +159,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT US">
 
-                        <input type="hidden" value="eSzxgUuBDxeFnejggwW/xDDigES3w7cOHwCaH7jHeEKxjHQA+GuP4HjKUzHA7sp3Knap4dR5FLZkNZaUXmTSBA71pbPG1M017X/l7Zqm++kNVOLxOiSycW2L/XQPCTPn" data-form-email="true">
+                        <input type="hidden" value="0qb8/NkFBuXpRGDaHw0Hd1+DbdFkCIgZ41IGi90U6KxWYqoN8Yuu1kgPs95k3byLYhHcXIgYRpX6Vg9l4LKk2RjzFENuO7NbMYnebWk5qnuDGOJAQz+DxPTSpHTyzmjj" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
